# XFakeContrib

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  USAGE.md  deploy.ps1  installer_script.iss  move_required_libs_for_windows.ps1  required_libs_for_windows.txt
lib/: CMakeLists.txt
lib/adapters/: CMakeLists.txt  main.cpp
lib/adapters/include/: GitHubFetchAdapterWithUser.hpp  IAdapter.hpp
lib/config/: CMakeLists.txt  main.cpp
lib/config/include/: Config.hpp
lib/config/src/: Config.cpp
lib/data/: CMakeLists.txt  main.cpp
lib/data/include/: Contrib.hpp  ContribTotal.hpp
lib/data/src/: ContribTotal.cpp
lib/faker/: CMakeLists.txt  main.cpp
lib/faker/include/: Faker.hpp
lib/faker/lib/: CMakeLists.txt
lib/faker/src/: Faker.cpp
lib/git/: CMakeLists.txt  main.cpp
lib/git/include/: GitAddManager.hpp  GitBranchManager.hpp  GitChange.hpp  GitChangeCreate.hpp  GitChangeDelete.hpp  GitChangeEdit.hpp  GitChangeHandler.hpp  GitChangeManager.hpp  GitChangeQueue.hpp  GitCheckIgnoreManager.hpp  GitCheckoutManager.hpp  GitCommand.hpp  GitCommandExecutor.hpp  GitCommitManager.hpp  GitDiffManager.hpp  GitHubAuthChecker.hpp  GitHubContribFetcher.hpp  GitHubUpdateChecker.hpp  GitLogManager.hpp  GitManager.hpp  GitPushManager.hpp  GitRemoteManager.hpp  GitRepository.hpp  Git_Global.hpp
lib/git/src/: GitAddManager.cpp  GitBranchManager.cpp  GitChangeCreate.cpp  GitChangeDelete.cpp  GitChangeEdit.cpp  GitCommandExecutor.cpp  GitCommitManager.cpp  GitDiffManager.cpp  GitHubAuthChecker.cpp  GitHubContribFetcher.cpp  GitHubUpdateChecker.cpp  GitLogManager.cpp  GitManager.cpp  GitPushManager.cpp  GitRepository.cpp
lib/git/tests/: test.cpp  test.hpp
lib/github/: CMakeLists.txt  main.cpp
lib/github/include/: Contrib.hpp  GitHubAuthChecker.hpp  GitHubContribFetcher.hpp  GitHubContribLevels.hpp  GithubAuthChecker.hpp
lib/github/src/: GitHubAuthChecker.cpp  GitHubContribFetcher.cpp
lib/helpers/: CMakeLists.txt  main.cpp
lib/helpers/include/: GitHubContribAdapter.hpp  IAdapter.hpp  XFakeContribHelper.hpp
lib/helpers/src/: RequirementsController.cpp  XFakeContribHelper.cpp
lib/resources/: CMakeLists.txt  README.md  XFakeContrib.desktop  res.qrc  style.qss
lib/resources/themes/: orange.json  pink.json
lib/resources/translations/: translation_tr.ts
lib/settings/: CMakeLists.txt  main.cpp
lib/settings/include/: Settings.hpp
lib/settings/src/: Settings.cpp
lib/style/: CMakeLists.txt
lib/style/include/: Icon.hpp  StyleManager.hpp
lib/style/src/: Icon.cpp  StyleManager.cpp
lib/utils/: CMakeLists.txt
lib/utils/adapters/: main.cpp
lib/utils/adapters/include/: GitHubContribAdapter.hpp
lib/utils/data/src/: Contrib.cpp
lib/utils/export/include/: Utils_Global.hpp
lib/utils/faker/: main.cpp
lib/utils/faker/include/: Faker.hpp
lib/utils/helpers/: main.cpp
lib/utils/helpers/include/: RequirementsController.hpp  XFakeContribHelper.hpp
lib/utils/helpers/src/: RequirementsController.cpp  XFakeContribHelper.cpp
lib/utils/settings/: main.cpp
lib/utils/settings/include/: Settings.hpp
lib/utils/settings/src/: Settings.cpp
lib/utils/style/: main.cpp
lib/utils/style/include/: Icon.hpp  StyleManager.hpp
lib/utils/style/src/: Icon.cpp  StyleManager.cpp
lib/widgets/: CMakeLists.txt  main.cpp
lib/widgets/Card/: CMakeLists.txt  main.cpp
lib/widgets/Card/include/: Card.hpp
lib/widgets/CardManager/: CMakeLists.txt  main.cpp
lib/widgets/CardManager/include/: CardManager.hpp
lib/widgets/CardManager/src/: CardManager.cpp
lib/widgets/ContribCard/: CMakeLists.txt  main.cpp
lib/widgets/ContribCard/include/: ContribCard.hpp  ContribCardInfo.hpp  ContribColor.hpp  ContributionPeriod.hpp  DayContrib.hpp  LevelColorIndicator.hpp  MonthContrib.hpp  YearContrib.hpp  YearContribTotalIndicator.hpp
lib/widgets/ContribCard/src/: ContribCard.cpp  ContribCardInfo.cpp  ContribColor.cpp  ContributionPeriod.cpp  DayContrib.cpp  LevelColorIndicator.cpp  MonthContrib.cpp  YearContrib.cpp
lib/widgets/RepositoryCard/: CMakeLists.txt  main.cpp
lib/widgets/RepositoryCard/design/: LogDialog.ui  RepositoryCardUI.ui
lib/widgets/RepositoryCard/include/: GitCommitter.hpp  GitPusher.hpp  LogDialog.hpp  RepositoryCard.hpp  RepositoryCardConnections.hpp  RepositoryCardCreateCommits.hpp  RepositoryCardPush.hpp  RepositoryCardRandomCheckBox.hpp  RepositoryComposingWidgets.hpp  RepositoryEnableCheckBox.hpp  RepositoryTableItem.hpp  RepositoryTableItemBranch.hpp  RepositoryTableItemCommitFile.hpp  RepositoryTableItemConnections.hpp  RepositoryTableItemLog.hpp  RepositoryTableItemName.hpp  RepositoryTableItemPush.hpp  RepositoryTableItemRemote.hpp  RepositoryTableItemStatus.hpp  RepositoryTableType.hpp  RepositoryTableView.hpp
lib/widgets/RepositoryCard/src/: GitCommitter.cpp  GitPusher.cpp  LogDialog.cpp  RepositoryCard.cpp  RepositoryCardConnections.cpp  RepositoryCardCreateCommits.cpp  RepositoryCardPush.cpp  RepositoryCardRandomCheckBox.cpp  RepositoryComposingWidgets.cpp  RepositoryEnableCheckBox.cpp  RepositoryTableItem.cpp  RepositoryTableItemBranch.cpp  RepositoryTableItemCommitFile.cpp  RepositoryTableItemConnections.cpp  RepositoryTableItemLog.cpp  RepositoryTableItemName.cpp  RepositoryTableItemPush.cpp  RepositoryTableItemRemote.cpp  RepositoryTableItemStatus.cpp  RepositoryTableView.cpp
lib/widgets/RepositoryManagerCard/: CMakeLists.txt  main.cpp
lib/widgets/RepositoryManagerCard/src/: RepositoryManagerCard.cpp  (+5 more)
lib/widgets/ThemeSelectorCard/: CMakeLists.txt  main.cpp
lib/widgets/UserManagerCard/: CMakeLists.txt  main.cpp
lib/widgets/include/: ContribCard.hpp  ContribColor.hpp  ContributionPeriod.hpp  DayContrib.hpp  LevelColorIndicator.hpp  MonthContrib.hpp  WeekContrib.hpp  YearContrib.hpp
lib/widgets/src/: ContribColor.cpp  ContribColor.hpp  DayContrib.cpp  LevelColorIndicator.cpp  MonthContrib.cpp  WeekContrib.cpp  YearContrib.cpp  YearContribTotalIndicator.cpp
resources/: CMakeLists.txt  README.md  XFakeContrib.desktop  res.qrc
resources/themes/: blue.json
resources/translations/: translation_tr_TR.qm  translation_tr_TR.ts
(+40 files in other folders)
